--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -245,6 +245,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Two built-in functions \"isinstance()\" and \"issubclass()\" are used to check \n",
+    "inheritances. \n",
+    "\n",
+    "Function isinstance(): returns True if the object is an instance \n",
+    "of the class or other classes derived from it.Its argument are (object, class).\n",
+    "'''\n",
+    "print( isinstance(t,Triangle)) \n",
+    "print( isinstance(t,Polygon))  \n",
+    "\n",
+    "print( isinstance(t,int))    \n",
+    "print( isinstance(t,object)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "issubclass() is used to check for class inheritance.\n",
+    "argument(Derived class, Base class)\n",
+    "'''\n",
+    "print( issubclass(Polygon,Triangle)) \n",
+    "print( issubclass(Triangle,Polygon)) \n",
+    "\n",
+    "print( issubclass(bool,int))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
