--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -301,6 +301,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complex Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2+3j\n",
+      "(5, 0, 10)\n",
+      "Attribute error\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "It has two functions, __init__() to initialize the variables (defaults to \n",
+    "zero) and getData() to display the number properly.\n",
+    "'''\n",
+    "class ComplexNumber:\n",
+    "    def __init__(self,r = 0,i = 0):\n",
+    "        self.real = r\n",
+    "        self.imag = i\n",
+    "\n",
+    "    def getData(self):\n",
+    "        print(\"{0}+{1}j\".format(self.real,self.imag))\n",
+    "\n",
+    "# Create a new ComplexNumber object\n",
+    "c1 = ComplexNumber(2,3)\n",
+    "\n",
+    "# Call getData() function\n",
+    "c1.getData()\n",
+    "\n",
+    "# Create another ComplexNumber object\n",
+    "# and create a new attribute 'attr'\n",
+    "c2 = ComplexNumber(5)\n",
+    "c2.attr = 10\n",
+    "\n",
+    "print((c2.real, c2.imag, c2.attr))\n",
+    "\n",
+    "# but c1 object doesn't have attribute 'attr'\n",
+    "# AttributeError: 'ComplexNumber' object has no attribute 'attr'\n",
+    "try:\n",
+    "    c1.attr\n",
+    "except AttributeError:\n",
+    "    print('Attribute error')\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
