--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +355,89 @@
     "except AttributeError:\n",
     "    print('Attribute error')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deleting Attributes, Objects and Class method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attribute error\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Using \"del\", we can delete--> object, its attribute, class method\n",
+    "'''\n",
+    "'''\n",
+    "On the command del c1, this binding is removed and the name c1 is deleted from the\n",
+    "corresponding namespace. The object however continues to exist in memory and if no\n",
+    "other name is bound to it, it is later automatically destroyed.\n",
+    "\n",
+    "This automatic destruction of unreferenced objects in Python is also called garbage collection.\n",
+    "'''\n",
+    "\n",
+    "c1 = ComplexNumber(2,3)\n",
+    "del c1.imag     ## now c1 has only one attribute real\n",
+    "try:\n",
+    "    c1.getData()    ## img is not defined\n",
+    "except AttributeError:\n",
+    "    print('Attribute error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attribute error\n"
+     ]
+    }
+   ],
+   "source": [
+    "del ComplexNumber.getData\n",
+    "try:\n",
+    "    c1.getData()    ## getData is not defined, class method\n",
+    "except AttributeError:\n",
+    "    print('Attribute error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name Error\n"
+     ]
+    }
+   ],
+   "source": [
+    "c3 = ComplexNumber(1,3)\n",
+    "del c3     ## c3 is not defined, object\n",
+    "try:\n",
+    "    c3.real\n",
+    "except NameError:\n",
+    "    print('Name Error')"
    ]
   },
   {
