--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Enter side 1 : 3\n",
-      "Enter side 2 : 5\n",
-      "Enter side 3 : 4\n",
+      "Enter side 2 : 4\n",
+      "Enter side 3 : 5\n",
       "Side 1 is 3.0\n",
-      "Side 2 is 5.0\n",
-      "Side 3 is 4.0\n",
+      "Side 2 is 4.0\n",
+      "Side 3 is 5.0\n",
       "The area of the triangle is 6.00\n"
      ]
     }
@@ -233,7 +233,7 @@
     "        a, b, c = self.sides\n",
     "        # calculate the semi-perimeter\n",
     "        s = (a + b + c) / 2\n",
-    "        area = (s*(s-a)*(s-b)*(s-c)) ** 0.5\n",
+    "        area = (s*(s-a)*(s-b)*(s-c))  ** 0.5\n",
     "        print('The area of the triangle is %0.2f' %area)\n",
     "\n",
     "        \n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,35 @@
     "print( issubclass(Polygon,Triangle)) \n",
     "print( issubclass(Triangle,Polygon)) \n",
     "\n",
-    "print( issubclass(bool,int))\n"
+    "print( issubclass(bool,int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''   \n",
+    "Every class in Python is derived from the class \"object\". It is the most base type in\n",
+    "Python. So technically, all other class, either built-in or user-defines, are derived \n",
+    "classes and all objects are instances of object class.\n",
+    "'''\n",
+    "print(issubclass(list,object))\n",
+    "\n",
+    "print(isinstance(5.5,object))\n",
+    "\n",
+    "print(isinstance(\"Hello\",object))"
    ]
   },
   {
@@ -379,7 +407,7 @@
    ],
    "source": [
     "'''\n",
-    "Using \"del\", we can delete--> object, its attribute, class method\n",
+    "Using \"del, we can delete--> object, its attribute, class method\n",
     "'''\n",
     "'''\n",
     "On the command del c1, this binding is removed and the name c1 is deleted from the\n",
@@ -441,11 +469,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multilevel inheritance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "In multilevel inheritance, features of the base class and the derived class is \n",
+    "inherited into the new derived class.\n",
+    "'''\n",
+    "class Base:\n",
+    "    pass\n",
+    "class Derived1(Base):\n",
+    "    pass\n",
+    "class Derived2(Derived1):\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base 1 class\n",
+      "Child class\n",
+      "Order of execution of class:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[__main__.MultiDerived, __main__.Base1, __main__.Base2, object]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "In multiple inheritance, the features of all the base classes are inherited into the derived class.\n",
+    "'''\n",
+    "\n",
+    "class Base1:\n",
+    "    def feature1(self):\n",
+    "        print('Base 1 class')\n",
+    "    \n",
+    "    def feature2(self):\n",
+    "        print('Base1 class feature2')\n",
+    "        \n",
+    "class Base2:\n",
+    "    def feature1(self):\n",
+    "        print('Base 2 class')\n",
+    "    \n",
+    "    def feature4(self):\n",
+    "        print('Base2 class feature3')\n",
+    "        \n",
+    "class MultiDerived(Base1, Base2):\n",
+    "    def feature4(self):\n",
+    "        print('Child class')\n",
+    "\n",
+    "m= MultiDerived()\n",
+    "m.feature1()  ## now m is confused, for which class feature should be call\n",
+    "m.feature4()\n",
+    "\n",
+    "print(\"Order of execution of class:\")\n",
+    "MultiDerived.mro()\n",
+    "\n",
+    "## So MRO comes into the picture, always goes to left class then right class in \n",
+    "## multiple inheritance."
+   ]
   }
  ],
  "metadata": {
