--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -558,6 +558,48 @@
     "## So MRO comes into the picture, always goes to left class then right class in \n",
     "## multiple inheritance."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method Resolution Order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<class '__main__.M'>, <class '__main__.B'>, <class '__main__.A'>, <class '__main__.X'>, <class '__main__.Y'>, <class '__main__.Z'>, <class 'object'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "MultiDerived class the search order is [MultiDerived, Base1, Base2, object]. \n",
+    "This order is also called linearization of MultiDerived class and the set of \n",
+    "rules used to find this order is called Method Resolution Order (MRO).\n",
+    "\n",
+    "MRO of a class can be viewed as the __mro__ attribute or mro() method.\n",
+    "Always goes to left class then right class in multiple inheritance\n",
+    "'''\n",
+    "\n",
+    "class X: pass\n",
+    "class Y: pass\n",
+    "class Z: pass\n",
+    "\n",
+    "class A(X,Y): pass\n",
+    "class B(Y,Z): pass\n",
+    "\n",
+    "class M(B,A,Z): pass\n",
+    "\n",
+    "print(M.mro())\n"
+   ]
   }
  ],
  "metadata": {
