--- a/OOPS/Other_Features.ipynb
+++ b/OOPS/Other_Features.ipynb
@@ -54,11 +54,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Python Class: Abstraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11000.0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class Employee with abstract methods calculate_salary",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-3e3afbc87c2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0memp_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate_salary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0memp2\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mEmployee\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class Employee with abstract methods calculate_salary"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Abstraction is used to simplify complex reality by modelling classes appropriate to the problem. \n",
+    "Here, we have an abstract class which cannot be instantiated. This means you cannot create objects\n",
+    "or instances for these classes. \n",
+    "\n",
+    "It can only be used for inheriting certain functionalities which you call as a base class. \n",
+    "So you can inherit functionalities but at the same time, you cannot create an instance of \n",
+    "this particular class.\n",
+    "\"\"\"\n",
+    "from abc import ABC, abstractmethod     \n",
+    " \n",
+    "class Employee(ABC):  ## become abstract class\n",
+    "    @abstractmethod \n",
+    "    def calculate_salary(self,sal):\n",
+    "        pass\n",
+    "\n",
+    "class Developer(Employee):    ## derived class\n",
+    "    def calculate_salary(self,sal):\n",
+    "        finalsalary= sal*1.10\n",
+    "        return  finalsalary\n",
+    "\n",
+    "emp_1 = Developer()\n",
+    "print(emp_1.calculate_salary(10000))\n",
+    "emp2= Employee()\n",
+    "\n",
+    "# If you actually go on and make an object of class “Employee”, it throws you an error as \n",
+    "# python doesn’t allow you to create an object of abstract class. But using inheritance, you\n",
+    "# can actually inherit the properties and perform the respective tasks.\n"
+   ]
   }
  ],
  "metadata": {
